# frontend-mocks-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: SPEC.md  TECHNICAL.md
docs/prompts/: interpret.md
docs/tasks/: 00-bootstrap.md  01-project-scaffold.md  02-mcp-filesystem.md  03-langgraph-state.md  04-nodes-read-interpret.md  05-nodes-generate-validate.md  06-nodes-write-response.md  07-graph-cli.md  08-security-errors.md  09-docs-examples.md  README.md
examples/mocks/: user.mock.ts
examples/types/: AddressUser.ts  User.ts
src/: __init__.py  cli.py
src/agent/: __init__.py  graph.py  llm.py  state.py
src/agent/nodes/: __init__.py  generate.py  interpret.py  read.py  respond.py  validate.py  write.py
src/mcp/: __init__.py  client.py  tools.py
src/rules/: __init__.py  generation.py
src/security/: __init__.py  validation.py
