[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend-mocks-generator"
version = "0.1.0"
description = "Agente LangGraph/MCP que gera mocks TypeScript a partir de models frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2",
    "langchain>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "mcp>=1.0,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
